# rice-runtime

./: .clang-format  CMakeLists.txt  README.md  todolist.todo
doc/: class_diagram.mdj  doc.md
doc/examples/core/: config.yml
doc/examples/package.urp/: METAINF  package-info.yml
doc/package/: nrp.md  package.md  urp.md
doc/schemas/core/: config-schema.json
doc/schemas/package/: info-schema.json
export/rice/: core.h  core_initializer.h  package.h
include/: package_manager.h
include/rice/: rice.h  rice_config.h  rice_core.h  rice_core_initializer.h  rice_package.h
src/: pch.h
src/common/core/: package_manager.c
src/common/package_manager/: package.c  package_manager.c  read_native_package.c  read_package_info_yml.c
src/common/util/: rice_version.c
src/core/: package-manager.c
src/include/: macros.h  native_package.h  package.h  package_manager.h  rice_config.h  rice_private_config.h
src/include/package/: native_package.h  universal_package.h
src/linux/: linux_read_package.c
